# actix-svelte-webapp

./: Dockerfile  README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/2023-01-28-201423_create_users_table/: up.sql
backend/src/: error.rs  main.rs  schema.rs
backend/src/api/: auth.rs  mod.rs
backend/src/db/: mod.rs  models.rs
backend/src/db/auth/: login.rs  mod.rs  register.rs
frontend/: .env.dev  .env.prod  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/: app.html
frontend/src/components/: db.svelte  navbar.svelte  user.ts
frontend/src/components/auth/: loginForm.svelte  registerForm.svelte
frontend/src/components/profile/: profile.svelte
frontend/src/components/toasts/: toast.ts  toastHandler.svelte
frontend/src/lib/utils/: requests.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
frontend/src/routes/profile/: +page.svelte
