[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging utilities
log = "0.4.14"
env_logger = "0.10.0"
dotenvy = "0.15"

# actix and actix-related dependencies
actix-web = "4.3.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }

# diesel
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "postgres_backend"] }
diesel_migrations = {version = "2.0.0", features=["postgres"]}

# uuid with unix timestamp based generation
uuid = { version = "1.2.2", features = ["serde", "v7", "v4"] }

# serde 
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"
chrono = {version = "0.4.19", features = ["serde"] }

# error handling
thiserror = "1.0.38"

# hashing
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }


